--- a/package.json
+++ b/package.json
@@ -22,15 +22,23 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
+    "express-validation": "^1.0.2",
+    "joi": "^10.4.2",
     "jsonwebtoken": "^7.4.0",
+    "jwt-simple": "^0.5.1",
     "mongoose": "^4.9.8",
+    "ng2-date-picker": "^1.4.2",
+    "ng2-datepicker": "^1.8.3",
+    "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
