--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
-    "start": "node app.js",
-    "build": "webpack",
-    "test": "karma start ./karma.conf.js",
-    "lint": "ng lint",
-    "e2e": "protractor ./protractor.conf.js",
-    "prepree2e": "npm start",
-    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
+   // "ng": "ng",
+    "start": "node app.js"
+   // "build": "webpack",
+   // "test": "karma start ./karma.conf.js",
+    //"lint": "ng lint",
+   // "e2e": "protractor ./protractor.conf.js",
+   // "prepree2e": "npm start",
+   // "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
   },
   "private": true,
   "dependencies": {
