--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-  
-    "start": "node app.js"
-   
+   "start": "node app.js"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +18,9 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "core-js": "^2.4.1",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.15.2",
+    "express-jwt": "^5.3.0",
     "express-validation": "^1.0.2",
     "joi": "^10.4.2",
     "jsonwebtoken": "^7.4.0",
@@ -34,7 +34,9 @@
     "passport-google-oauth": "^1.0.0",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
+    "redis": "^2.7.1",
     "rxjs": "^5.1.0",
+    "uuid": "^3.0.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
